--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-compat": "^4.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react-perf": "^3.3.0",
+    "eslint-plugin-react-redux": "^3.3.2",
+    "eslint-plugin-react-svg": "^0.0.4",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.44.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
